<resources>
    <string name="app_name">EspressoKata</string>
    <string name="login_activity_username_hint">User Name</string>
    <string name="login_activity_password_hint">Password</string>

    <string name="login_activity_username_error">Username need more than 4 chars</string>
    <string name="login_activity_password_error">Password must be more than 4 chars</string>
</resources>
