<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".LoginActivity">

    <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/loginActivityEtUserName"
            android:hint="@string/login_activity_username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/loginActivityEtPassword"
            android:hint="@string/login_activity_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/loginActivityBtLogin"
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/loginActivityTvError"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>