<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainActivityParent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/mTvMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello Espresso!"
            android:contentDescription="element tv"
            android:hint="hint text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="248dp"
            app:layout_constraintHorizontal_bias="0.514"/>

    <EditText
            android:id="@+id/mEtMain"
            android:layout_width="wrap_content"
            android:hint="Insert Age"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/mTvMain"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
    />

    <Button
            android:id="@+id/mBtnMain"
            android:layout_below="@+id/mEtMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/mEtMain"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>