<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".SpinnerActivity">

    <TextView
            android:id="@+id/spinnerActivityTv"
            android:textSize="24dp"
            android:text="eder.padilla97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <Spinner
            android:layout_marginTop="100dp"
            android:id="@+id/spinnerActivitySp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>